# system-design-quiz-mcp

./: README.md  evaluator.py  mcpize.yaml  pyproject.toml  questions.py  server.py
